# StellarID

./: .gitignore  Makefile  README.md  SECURITY.md  copy_artifacts.js  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  pr-check.yml
backend/: .env.example  generate_sponsor.js  jest.config.js  package.json  tsconfig.json
backend/circuits/: age_check_verification_key.json  income_check_verification_key.json  membership_check_verification_key.json  residency_check_verification_key.json
backend/src/: app.ts  index.ts
backend/src/db/: index.ts  migrate.ts  schema.sql
backend/src/jobs/: expiry-cron.ts
backend/src/middleware/: apiKey.ts  auth.ts  errorHandler.ts  rateLimiter.ts
backend/src/routes/: admin.ts  auth.ts  credentials.ts  fee-sponsor.ts  github-issuer.ts  issuers.ts  linkedin-issuer.ts  multisig.ts  platforms.ts  proofs.ts  verify.ts
backend/src/services/: ipfs.ts  pdf.ts  stellar.ts  zkVerifier.ts
backend/src/types/: snarkjs.d.ts
backend/src/utils/: crypto.ts  jwt.ts
contracts/credential_nft/: Cargo.toml
contracts/credential_nft/src/: lib.rs
contracts/disclosure_contract/: Cargo.toml
contracts/revocation_registry/: Cargo.toml
docs/: ARCHITECTURE.md
frontend/: package.json  tailwind.config.js  tsconfig.tsbuildinfo
scripts/: check-env.ts  copy-circuits.sh  demo.ts  deploy-contracts.sh  seed-issuers.ts  setup-ptau.sh
zk-circuits/: age_check.circom  compile.js  compile.sh  income_check.circom  membership_check.circom  package-lock.json  package.json  residency_check.circom  setup-ptau.js  setup-ptau.sh
(+37 files in other folders)
