[package]
name = "credential-nft"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
